--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,33 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Endereço do usuario
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" scrollY="false">
+  <div class="form">
+    <form action="#">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+      <label for="endereço">
+        <h6>Selecione o endereço</h6>
+        <ion-select>
+          <ion-select-option>Teste</ion-select-option>
+        </ion-select>
+      </label>
+
+      <label for="desc">
+        <h6>Descrição do lixo a ser coletado</h6>
+        <input type="text" name="desc" id="iddesc" placeholder="Digite aqui..." style="padding: 5px 0px 60px 5px;">
+      </label>
+
+      <label for="vl">
+        <h6>Qual o valor sugerido</h6>
+        <input type="number" name="valor" id="idvalor" placeholder="R$">
+      </label>
+
+      <button type="submit">Fazer solicitação</button>
+    </form>
+  </div>
 </ion-content>
