--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -5,9 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">chat</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button [routerLink]="['/']">
+    Tela Home
+  </ion-button>
 </ion-content>
