--- a/src/app/home-prestador/home-prestador.page.scss
+++ b/src/app/home-prestador/home-prestador.page.scss
@@ -2,3 +2,14 @@ ion-title{
     text-align: center;
     padding: 30px;
 }
+
+ion-button{
+    width: 500px;
+}
+
+.navegacao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+}
