--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -5,6 +5,35 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+ <p>Digite o valor combinado:</p>
+
+ <ion-item>
+  <ion-label position="floating"></ion-label>
+  <ion-input
+    type="text"
+    [(ngModel)]="valor"
+    (ionInput)="formatarMoeda($event)"
+  ></ion-input>
+</ion-item>
+
+<p>Qual a forma de pagamento:</p>
+
+<ion-grid>
+  <ion-row>
+    <ion-col size="6" *ngFor="let forma of formasPagamento">
+      <ion-button
+        expand="block"
+        [ngClass]="formaSelecionada === forma ? 'botao-verde-escuro' : 'botao-verde-claro'"
+        (click)="selecionarForma(forma)"
+      >
+        {{ forma }}
+      </ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+
   <ion-button [routerLink]="['/']">
     Tela Home
   </ion-button>
