--- a/src/app/acompanhamento-do-servico/acompanhamento-do-servico.page.html
+++ b/src/app/acompanhamento-do-servico/acompanhamento-do-servico.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-title>acompanhamento-do-servico</ion-title>
   </ion-toolbar>
+  <meta name="color-scheme" content="light">
 </ion-header>
 
 <ion-content [fullscreen]="true">
