--- a/src/app/pagamento/pagamento.page.scss
+++ b/src/app/pagamento/pagamento.page.scss
@@ -1,6 +1,3 @@
-*{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
 
 .botao-verde-claro {
     --background: #b9fbc0;
@@ -8,6 +5,16 @@
   }
   
   .botao-verde-escuro {
-    --background: #2c6d50;
+    --background: #2d6a4f;
     --color: white;
+  }
+
+  .formatarMoeda{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14vw;
+    text-align: center;
+    color: #0a3d31;
+    width: 70vw;
   }
