--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -1,14 +1,42 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>cadastro</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <div class="container">
+    <div class="logo-container">
+      <div class="logo-background">
+        <div class="logo-inner">
+          <span class="leaf-icon"></span> 
+          <div class="logo-text">
+            <span class="coleta">COLETA</span>
+            <span class="verde">VERDE</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<ion-content [fullscreen]="true">
+    <div class="form-container">
+      <div class="input-group">
+        <ion-item>
+          <ion-label position="floating">Nome da Empresa</ion-label>
+          <ion-input type="text" class="input-field"></ion-input>
+        </ion-item>
 
-<ion-input>teste</ion-input>
+        <ion-item>
+          <ion-label position="floating">Nome Completo do Representante</ion-label>
+          <ion-input type="text" class="input-field"></ion-input>
+        </ion-item>
 
-  <ion-button [routerLink]="['/']">
-    Tela Home
-  </ion-button>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" class="input-field"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field"></ion-input>
+          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
+        </ion-item>
+      </div>
+
+      <ion-button expand="block" class="register-button">Registrar-se</ion-button> 
+    </div>
+  </div>
 </ion-content>
