atualização da pagina pagamentos

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 :root {
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000;
     color-scheme: light;
   }
+
+*{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
