--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -1,36 +1,67 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>pagamento</ion-title>
+
+    <!-- Título que abre o dropdown -->
+    <div class="titulo-dropdown" (click)="mostrarEnderecos = !mostrarEnderecos">
+      {{ enderecoSelecionado || 'Endereço do usuário' }}
+    </div>
+
+    <!-- Botão de notificação -->
+    <ion-buttons slot="end">
+      <ion-button (click)="abrirNotificacoes()" class="botao-notificacao">
+        <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
+
+  <!-- Lista suspensa de endereços -->
+  <div class="lista-enderecos" *ngIf="mostrarEnderecos">
+    <ion-list>
+      <ion-item *ngFor="let endereco of enderecos" (click)="selecionarEndereco(endereco)">
+        {{ endereco }}
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  <p>Digite o valor combinado:</p>
 
-  <ion-item class="formatarMoeda">
-    <ion-label position="floating"></ion-label>
-    <ion-input
-      type="text"
-      [(ngModel)]="valor"
-      (ionInput)="formatarMoeda($event)"
-    ></ion-input>
-  </ion-item>
+  <div class="content-padding">
+    <p>Digite o valor combinado:</p>
 
-  <p>Qual a forma de pagamento:</p>
+    <ion-item class="formatarMoeda">
+      <ion-label position="floating"></ion-label>
+      <ion-input
+        type="text"
+        [(ngModel)]="valor"
+        (ionInput)="formatarMoeda($event)"
+      ></ion-input>
+    </ion-item>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let forma of formasPagamento">
-        <ion-button
-          expand="block"
-          [ngClass]="formaSelecionada === forma ? 'botao-verde-escuro' : 'botao-verde-claro'"
-          (click)="selecionarForma(forma)"
-        >
-          {{ forma }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      <p class="p-pagamento">Qual a forma de pagamento:</p>
 
-  <ion-button [routerLink]="['/']"> Tela Home </ion-button>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6" *ngFor="let forma of formasPagamento">
+            <ion-button
+              expand="block"
+              [ngClass]="formaSelecionada === forma ? 'botao-verde-claro' : 'botao-cinza'"
+              (click)="selecionarForma(forma)"
+            >
+              {{ forma | titlecase }}
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    <div class="btn-pagar"> 
+      <button type="submit">Pagar</button>
+    </div>
+
+  </div>
+
+  <img src="/assets/img/fundo-arvores-removebg-preview.png" alt="">
+  <!-- <ion-button [routerLink]="['/']"> Tela Home </ion-button> -->
 </ion-content>
