--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,12 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000;
+    color-scheme: light;
+  }
+
+  body.dark {
+    // remove ou comente esse bloco se ele existir
+  }
