--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <div class="container">
+    <div class="logo-container">
+      <div class="logo-background">
+        <div class="logo-inner">
+          <ion-icon name="leaf-outline"></ion-icon>
+          <div class="logo-text">
+            <span class="coleta">COLETA</span>
+            <span class="verde">VERDE</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<ion-content [fullscreen]="true">
-  <ion-button [routerLink]="['/']">
-    Tela Home
-  </ion-button>
+    <h2 class="welcome">Bem - Vindos</h2>
+
+    <div class="form-container">
+      <div class="input-group">
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" class="input-field"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field"></ion-input>
+          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
+        </ion-item>
+      </div>
+
+      <ion-button expand="block" class="enter-button">Entrar</ion-button>
+
+      <p class="forgot-password">Esqueci minha senha</p>
+    </div>
+  </div>
 </ion-content>
