atuaizaçao pagina de solicitação

--- a/src/app/solicitacoes/solicitacoes.page.html
+++ b/src/app/solicitacoes/solicitacoes.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" scrollY="false">
-  <div class="form">
+  <div class="form" style="background-image: url('assets/imagens/fundo-arvores-removebg-preview.png'); background-repeat: repeat-x; background-size: contain;">
     <form action="#">
 
       <label for="endereço">
@@ -28,6 +28,7 @@
       </label>
 
       <button type="submit">Fazer solicitação</button>
+      <!-- <img class='img' src="/assets/img/fundo-arvores-removebg-preview.png" alt=""> -->
     </form>
   </div>
 </ion-content>
