--- a/src/app/solicitacoes/solicitacoes.page.html
+++ b/src/app/solicitacoes/solicitacoes.page.html
@@ -7,28 +7,28 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" scrollY="false">
-  <div class="form" style="background-image: url('assets/imagens/fundo-arvores-removebg-preview.png'); background-repeat: repeat-x; background-size: contain;">
-    <form action="#">
+    <div class="form bgd">
+      <form action="#">
 
-      <label for="endereço">
-        <h6>Selecione o endereço</h6>
-        <ion-select>
-          <ion-select-option>Teste</ion-select-option>
-        </ion-select>
-      </label>
+        <label for="endereço">
+          <h6>Selecione o endereço</h6>
+          <ion-select>
+            <ion-select-option>Teste</ion-select-option>
+          </ion-select>
+        </label>
 
-      <label for="desc">
-        <h6>Descrição do lixo a ser coletado</h6>
-        <input type="text" name="desc" id="iddesc" placeholder="Digite aqui..." style="padding: 5px 0px 60px 5px;">
-      </label>
+        <label for="desc">
+          <h6>Descrição do lixo a ser coletado</h6>
+          <input type="text" name="desc" id="iddesc" placeholder="Digite aqui..." style="padding: 5px 0px 60px 5px;">
+        </label>
 
-      <label for="vl">
-        <h6>Qual o valor sugerido</h6>
-        <input type="number" name="valor" id="idvalor" placeholder="R$">
-      </label>
+        <label for="vl">
+          <h6>Qual o valor sugerido</h6>
+          <input type="number" name="valor" id="idvalor" placeholder="R$">
+        </label>
 
-      <button type="submit">Fazer solicitação</button>
-      <!-- <img class='img' src="/assets/img/fundo-arvores-removebg-preview.png" alt=""> -->
-    </form>
-  </div>
+        <button type="submit">Fazer solicitação</button>
+        <!-- <img class='img' src="/assets/img/fundo-arvores-removebg-preview.png" alt=""> -->
+      </form>
+    </div>
 </ion-content>
