--- a/src/app/solicitacoes/solicitacoes.page.scss
+++ b/src/app/solicitacoes/solicitacoes.page.scss
@@ -4,14 +4,17 @@
 ion-title{
     text-align: center;
 }
+.bgd{
+  background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
+  background-repeat: repeat-x; 
+  background-size: contain; 
+  background-position: center bottom 100px;
+}
 .form{
-    display: flex;
     justify-content: center;
     height: 100vh;
     background-color: rgb(233, 237, 237);
-    background-image: url(/src/assets/icon/end.jpg);
-    background-repeat: no-repeat;
-    background-position: center bottom 100px
+
 }
 input{
     border-radius: 10px;
