--- a/src/app/pagamento/pagamento.page.scss
+++ b/src/app/pagamento/pagamento.page.scss
@@ -9,9 +9,14 @@ ion-title{
     cursor: pointer;
 }
 
-.content-padding{
+.content-padding {
     padding: 16px;
-}
+    width: 100%;
+    height: 100%;
+    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+  }
 
 .botao-verde-claro,
 .botao-cinza {
@@ -72,31 +77,7 @@ button:hover {
   background-color: #0c612b;
 }
 
-img{
-    position: relative;
-    z-index: 1;
-    margin-top: -150px;
-}
-
 .botao-notificacao{
     --color: #0a4e23;
     padding: -20px;
 }
-
-.titulo-dropdown {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    font-size: 15px;
-    color: #242424;
-  }
-  
-  .lista-enderecos {
-    position: absolute;
-    margin-right: 50px;
-    margin-left: 50px;
-    background-color: white;
-    z-index: 10;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
