--- a/src/app/solicitacoes/solicitacoes.page.html
+++ b/src/app/solicitacoes/solicitacoes.page.html
@@ -12,8 +12,8 @@
 
         <label for="endereço">
           <h6>Selecione o endereço</h6>
-          <ion-select>
-            <ion-select-option>Teste</ion-select-option>
+          <ion-select placeholder="Selecionar">
+            <ion-select-option>>>exemplo de endereço>></ion-select-option>
           </ion-select>
         </label>
 
