--- a/src/app/pagamento/pagamento.page.scss
+++ b/src/app/pagamento/pagamento.page.scss
@@ -14,7 +14,7 @@ ion-title{
     width: 100%;
     height: 100%;
     background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
-    background-position: center bottom;
+    background-position: center bottom 100px;
     background-repeat: no-repeat;
   }
 
