mudança na tabs solicitações > pedidos

--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -47,6 +47,10 @@
     <ion-button [routerLink]="['/separacao-cliente-prestador']">
       Tela separacao cliente-prestador
     </ion-button>
+
+    <ion-button [routerLink]="['/solicitacao']">
+      Tela solicitação
+    </ion-button>
     
     <ion-button [routerLink]="['/']">
       Tela Home
