--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -18,7 +18,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <div class="content-padding">
+  <div class="content-padding bgd">
     <p>Digite o valor combinado:</p>
 
     <ion-item class="formatarMoeda">
@@ -49,7 +49,5 @@
     <div class="btn-pagar"> 
       <button type="submit">Pagar</button>
     </div>
-
   </div>
-  <!-- <ion-button [routerLink]="['/']"> Tela Home </ion-button> -->
-</ion-content>
+  </ion-content>
