--- a/src/app/pagamento/pagamento.page.scss
+++ b/src/app/pagamento/pagamento.page.scss
@@ -11,11 +11,15 @@ ion-title{
 
 .content-padding {
     padding: 16px;
+  }
+
+  .bgd{
+    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
+    background-repeat: repeat-x; 
+    background-size: contain; 
+    background-position: center bottom;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png');
-    background-position: center bottom;
-    background-repeat: no-repeat;
   }
 
 .botao-verde-claro,
