adição da pasta component, e colocação do componente global toolbar. Também colocado o app-toolbar-global na pagina de pagamento.

--- a/src/app/acompanhamento-do-servico/acompanhamento-do-servico.page.html
+++ b/src/app/acompanhamento-do-servico/acompanhamento-do-servico.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>acompanhamento-do-servico</ion-title>
+    <app-toolbar-global [titulo]="'pedido'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
