--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -1,20 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-
-    <!-- Botão de notificação -->
-    <ion-buttons slot="end">
-      <ion-button (click)="abrirNotificacoes()" class="botao-notificacao">
-        <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
+    <app-toolbar-global [titulo]="'Pagamento'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
-
 
 <ion-content [fullscreen]="true">
 
