atualização na pagina login; adição da imagem logo do aplicativo em assets/imagens

--- a/src/app/configuracoes/configuracoes.page.html
+++ b/src/app/configuracoes/configuracoes.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>configuracoes</ion-title>
+    <app-toolbar-global [titulo]="'Configurações'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
