--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Endereço do usuario
-    </ion-title>
+    <app-toolbar-global [titulo]="'Solicitação'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
