--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,16 +1,7 @@
-<ion-content class="ion-padding">
-  <div class="container">
-    <div class="logo-container">
-      <div class="logo-background">
-        <div class="logo-inner">
-          <ion-icon name="leaf-outline"></ion-icon>
-          <div class="logo-text">
-            <span class="coleta">COLETA</span>
-            <span class="verde">VERDE</span>
-          </div>
-        </div>
-      </div>
-    </div>
+<ion-content>
+  <div class="container bgd">
+    
+    <img src="/assets/imagens/logo-app-coleta-verde.png" alt="">
 
     <h2 class="welcome">Bem - Vindos</h2>
 
@@ -26,11 +17,13 @@
           <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field"></ion-input>
           <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
         </ion-item>
+
+        <ion-button expand="block" class="enter-button">Entrar</ion-button>
+
+        <p class="forgot-password">Esqueci minha senha</p>
+
       </div>
-
-      <ion-button expand="block" class="enter-button">Entrar</ion-button>
-
-      <p class="forgot-password">Esqueci minha senha</p>
+      
     </div>
   </div>
 </ion-content>
