--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,60 +1,33 @@
 ion-content {
-    --background: #f4f5f8; /* Cor de fundo geral */
+    --background: rgb(233, 237, 237);
   }
-  
+
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
     justify-content: flex-start;
-    min-height: 100%;
   }
-  
-  .logo-container {
-    margin-bottom: 20px;
+
+  .bgd{
+    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
+    background-repeat: repeat-x; 
+    background-size: contain; 
+    background-position: center bottom;
+    width: 100%;
+    height: 100%;
+    padding-top: 35px;
   }
-  
-  .logo-background {
-    background-color: #388e3c;
-    width: 100px;
-    height: 100px;
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .logo-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+  img{
+    width: 60vw;
+    height: 60vw;
   }
   
   ion-icon {
     font-size: 30px;
     color: white;
     margin-bottom: 5px;
-  }
-  
-  .logo-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .coleta {
-    font-size: 12px;
-    color: white;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-  }
-  
-  .verde {
-    font-size: 12px;
-    color: white;
-    font-weight: bold;
-    letter-spacing: 0.5px;
   }
   
   .welcome {
