--- a/src/app/solicitacao/solicitacao.page.scss
+++ b/src/app/solicitacao/solicitacao.page.scss
@@ -8,13 +8,14 @@ ion-title{
   background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
   background-repeat: repeat-x; 
   background-size: contain; 
-  background-position: center bottom 100px;
+  background-position: center bottom;
+  width: 100%;
+  height: 100%;
+  padding: 16px;
 }
 .form{
     justify-content: center;
-    height: 100vh;
     background-color: rgb(233, 237, 237);
-
 }
 input{
     border-radius: 10px;
