Implementação Toolbar Leilão

--- a/src/app/leilao/leilao.page.html
+++ b/src/app/leilao/leilao.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>leilao</ion-title>
+    <app-toolbar-global [titulo]="'Leilão'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
