Criação do Footer

--- a/src/app/leilao/leilao.page.scss
+++ b/src/app/leilao/leilao.page.scss
@@ -29,7 +29,7 @@ ion-content {
 }
 
 .mensagem-container {
-    position: fixed;
+    position: relative;
     bottom: 8px;
     left: 0;
     right: 0;
