--- a/src/app/component/footer-global/footer-global.component.html
+++ b/src/app/component/footer-global/footer-global.component.html
@@ -1,20 +1,20 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button routerLink="/tabs/tab1">
-        <ion-icon name="home-outline"></ion-icon>
+      <a href="/tabs/tab1" class="link-icone">
+        <img src="../../../assets/imagens/icones/iconeCasa.png" class="icone-custom" />
         <ion-label>Início</ion-label>
-      </ion-button>
+      </a>
 
-      <ion-button routerLink="/tabs/tab2">
-        <ion-icon name="document-text"></ion-icon>
+      <a href="/tabs/tab2" class="link-icone">
+        <img src="../../../assets/imagens/icones/iconeSolicitacoes.png" class="icone-custom" />
         <ion-label>Pedidos</ion-label>
-      </ion-button>
+      </a>
 
-      <ion-button routerLink="/tabs/tab3">
-        <ion-icon name="person-circle"></ion-icon>
+      <a href="/tabs/tab3" class="link-icone">
+        <img src="../../../assets/imagens/icones/iconePerfil.png" class="icone-custom" />
         <ion-label>Perfil</ion-label>
-      </ion-button>
+      </a>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
