--- a/src/app/leilao/leilao.page.scss
+++ b/src/app/leilao/leilao.page.scss
@@ -42,6 +42,11 @@ ion-content {
     margin-left: 1%;
 }
   
+.toolbar-background {
+    background: #eff0ef !important;
+    background-color: #eff0ef !important;
+}
+
 .mensagem-input {
     flex: 1;
 }
