alteração de nomes para alinhamento com figma; criação de mais paginas para alinhamento com figma também.

--- a/src/app/component/toolbar-global/toolbar-global.component.html
+++ b/src/app/component/toolbar-global/toolbar-global.component.html
@@ -1,7 +1,7 @@
 <ion-toolbar>
 
   <ion-buttons slot="start">
-    <ion-back-button defaultHref="/"></ion-back-button>
+    <ion-back-button defaultHref="/" *ngIf="mostrarBotaoVoltar"></ion-back-button>
   </ion-buttons>
 
   <ion-title>
