--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -1,60 +1,84 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Endereço do usuario
-    </ion-title>
+    <app-toolbar-global [titulo]="'Home'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="navegacao">
-    <ion-button [routerLink]="['/acompanhamento-do-servico']">
-      Tela acompanhamento do servico
+
+    <ion-button [routerLink]="['/agendamento']">
+      Tela Agendamento
+    </ion-button>
+    
+    <ion-button [routerLink]="['/cadastro-cliente']">
+      Tela cadastro cliente
     </ion-button>
 
-    <ion-button [routerLink]="['/cadastro']">
-      Tela cadastro
+    <ion-button [routerLink]="['/cadastro-prestador']">
+      Tela cadastro prestador
     </ion-button>
-
+    
     <ion-button [routerLink]="['/chat']">
       Tela chat
     </ion-button>
-
+    
     <ion-button [routerLink]="['/configuracoes']">
       Tela configuracoes
     </ion-button>
-
-    <ion-button [routerLink]="['/gerenciamento-de-solicitacoes']">
-      Tela gerenciamento de solicitações
-    </ion-button>
-
+    
     <ion-button [routerLink]="['/home-cliente']">
       Tela home cliente
     </ion-button>
-
+    
+    <ion-button [routerLink]="['/']">
+      Tela Home prestador
+    </ion-button>
+    
+    <ion-button [routerLink]="['/inicial']">
+      Tela inicial
+    </ion-button>
+    
     <ion-button [routerLink]="['/leilao']">
       Tela leilão
     </ion-button>
-
+    
     <ion-button [routerLink]="['/login']">
       Tela login
     </ion-button>
-
+    
     <ion-button [routerLink]="['/pagamento']">
       Tela pagamento
     </ion-button>
-        
-    <ion-button [routerLink]="['/separacao-cliente-prestador']">
-      Tela separacao cliente-prestador
+    
+    <ion-button [routerLink]="['/pedido-cliente']">
+      Tela pedido cliente
+    </ion-button>
+    
+    <ion-button [routerLink]="['/pedido-prestador']">
+      Tela pedido prestador
+    </ion-button>
+
+    <ion-button [routerLink]="['/tab/tab2']">
+      Tela pedidos cliente
+    </ion-button>
+    
+    <ion-button [routerLink]="['/pedidos-prestador']">
+      Tela pedidos prestador
+    </ion-button>
+
+    <ion-button [routerLink]="['/perfil-cliente']">
+      Tela perfil cliente
+    </ion-button>
+
+    <ion-button [routerLink]="['/perfil-prestador']">
+      Tela perfil prestador
     </ion-button>
 
     <ion-button [routerLink]="['/solicitacao']">
       Tela solicitação
     </ion-button>
     
-    <ion-button [routerLink]="['/']">
-      Tela Home
-    </ion-button>
 
   </div>
 
