--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" scrollY="false">
-    <div class="form bgd">
+    <div class="container bgd">
       <form action="#">
 
         <label for="endereço">
