--- a/src/app/leilao/leilao.page.html
+++ b/src/app/leilao/leilao.page.html
@@ -7,70 +7,9 @@
 <ion-content [fullscreen]="true">
 
   <div>
-    <ion-grid>
-      <ion-row>
-
-        <ion-col>
-          <ion-toolbar>
-            <ion-buttons slot="start">
-              <ion-back-button defaultHref="/"></ion-back-button>
-            </ion-buttons>
-          </ion-toolbar>
-        </ion-col>
-
-        <ion-col>
-          <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png" style="width: 45px; height: 45px;"/>
-        </ion-col>
-
-        <ion-col>
-          <p>Nome Completo do Trabalhador</p>
-        </ion-col>
-
-        <ion-col>
-          <img src="../../assets/imagens/icones/iconeFavorite.png">
-        </ion-col>
-
-      </ion-row>
-    </ion-grid>
+    <p>Pagina Leilão</p>
   </div>
 
-  <div class="descricaoChat">
-    <ion-row>
-      <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png" style="width: 165px; height: 165px;"/>
-    </ion-row>
-    <p>Nome Completo do Trabalhador</p>
-    <p>200 coletas realizadas</p>
-    <ion-row>
-      <ion-icon name="star"></ion-icon>
-      <ion-icon name="star"></ion-icon>
-      <ion-icon name="star"></ion-icon>
-      <ion-icon name="star-half"></ion-icon>
-      <ion-icon name="star-outline"></ion-icon>
-    </ion-row>
-  </div>
-
-  <div class="mensagens">
-    <!-- mensagens vão aqui -->
-  </div>
-
-  <!-- Campo de input fixado no final -->
-  <div class="blocoMsg">
-    <div class="mensagem-container">
-      <ion-item lines="none">
-        <ion-input
-          [(ngModel)]="mensagem"
-          placeholder="Digite sua mensagem aqui..."
-          class="mensagem-input"
-          type="text"
-        ></ion-input>
-
-        <ion-button fill="clear" (click)="enviarMensagem()">
-          <ion-icon name="send" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-item>
-    </div>
-  </div>
-  
 
 </ion-content>
 
