--- a/src/app/solicitacao/solicitacao.page.html
+++ b/src/app/solicitacao/solicitacao.page.html
@@ -10,7 +10,7 @@
 
         <label for="endereço">
           <h6>Selecione o endereço</h6>
-          <ion-select>
+          <ion-select placeholder="Selecionar">
             <ion-select-option>Teste</ion-select-option>
           </ion-select>
         </label>
@@ -30,3 +30,5 @@
       </form>
     </div>
 </ion-content>
+
+<app-footer-global></app-footer-global>
