retificação de rotas de tabs e insersão de toolbar em algumas paginas

--- a/src/app/agendamento/agendamento.page.html
+++ b/src/app/agendamento/agendamento.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>agendamento</ion-title>
+    <app-toolbar-global [titulo]="'Agendamento'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
