--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -59,7 +59,7 @@
       Tela pedido prestador
     </ion-button>
 
-    <ion-button [routerLink]="['/tab/tab2']">
+    <ion-button [routerLink]="['/pedidos-cliente']">
       Tela pedidos cliente
     </ion-button>
     
