--- a/src/app/pedidos-prestador/pedidos-prestador.page.html
+++ b/src/app/pedidos-prestador/pedidos-prestador.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>pedidos prestador</ion-title>
+    <app-toolbar-global [titulo]="'Pedidos'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
