--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="tab3" href="/app/perfil-prestador">
       <ion-icon aria-hidden="true" name="person-circle"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
