--- a/src/app/agendamento/agendamento.page.html
+++ b/src/app/agendamento/agendamento.page.html
@@ -11,9 +11,55 @@
       <ion-card-header>
         <ion-card-title>Data do Serviço</ion-card-title>
       </ion-card-header>
-
+      <hr>
       <ion-card-content>
         <input type="date" name="date" id="IdDate">
+      </ion-card-content>
+      <div class="btn">
+      <input type="reset" value="cancelar">
+      <input type="submit" value="ok">
+      </div>
+    </ion-card>
+
+    <ion-card class="card-horario">
+      <ion-card-header>
+        <ion-card-title>Horário do serviço</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+
+        <!-- Container dos inputs e separador -->
+        <div class="row-horario">
+
+          <!-- Campo Hora (ex: "20") -->
+          <ion-input
+            type="number"
+            placeholder="20"
+            class="hora-input"
+          ></ion-input>
+
+          <!-- Separador ":" -->
+          <span class="sep">:</span>
+
+          <!-- Campo Minuto (ex: "00") -->
+          <ion-input
+            type="number"
+            placeholder="00"
+            class="minuto-input"
+          ></ion-input>
+
+        </div>
+
+        <!-- Botões Cancelar e OK -->
+        <div class="botoes-inline">
+          <ion-button fill="clear" size="small" color="medium">
+            Cancelar
+          </ion-button>
+          <ion-button fill="clear" size="small" color="success">
+            OK
+          </ion-button>
+        </div>
+
       </ion-card-content>
     </ion-card>
 
