--- a/src/app/agendamento/agendamento.page.scss
+++ b/src/app/agendamento/agendamento.page.scss
@@ -7,19 +7,61 @@
   width: 100%;
  height: 100%;
 }
-
-.card-data{
-  padding: 20px;
-  margin: 0px;
-  background-color: rgba(80, 239, 117, 0.361);
-  border-radius: 30px;
-
-  input{
-    background-color: rgba(80, 239, 117, 0);
-    border: none;
-    padding: 2%;
-    max-width: 100%;
-  }
+hr{
+  border: 1px solid rgb(219, 222, 222);
+  width: 100%;
+  margin: 0%;
+  padding: 0%;
+}
+ion-card{
+  border-radius: 8px;
+  background-color: #d6f0d9;
+  padding: 30px 0px 20px 0px;
+  margin: 0 auto; /* centraliza */
+  max-width: 320px; /* limita largura */
+  width: 100%; /* ocupa 100% até esse limite */
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.08);
 }
 
+.btn{
+  margin: 10px 15px 0px 10px;
+  text-align: right;
+  input{
+    border: none;
+    color: #0A4E23;
+  }
+}
+ion-card-content{
+  background-color: #d6f0d9;
 
+}
+
+.card-data{
+  margin-bottom: 5%;
+}
+input{
+  background-color: #d6f0d9;
+  font-size: 4.5vw;
+}
+ion-card-title {
+  color: #0A4E23;
+  font-size: 7vw;
+  font-weight: 600;
+  margin-bottom: 6px;
+}
+input[type="date"] {
+  width: 100%;
+  padding: 6px 10px;
+  border: 1px solid #2f9e25;
+  border-radius: 8px;
+  box-sizing: border-box;
+}
+
+.card-horario {
+  border-radius: 14px;
+  background-color: #f9f9f9;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.07);
+
+  ion-card-header {
+    padding: 8px 16px 0 16px;
+  }}
