--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -6,4 +6,83 @@
 
 <ion-content [fullscreen]="true">
 
+  <div class="blurred-background"></div>
+
+  <div class="content">
+
+    <ion-item>
+      <ion-label>
+        <h2>Pedido 1234</h2>
+        <p>Nome do cliente</p>
+        <p>12:30</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h2>Tipo de coleta</h2>
+        <p>Coleta de lixo Eletrônico</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button detail="true" class="itens-detalhes">
+      <ion-label>
+        <h3>Imagens dos resíduos</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button detail="true" class="itens-detalhes">
+      <ion-label>
+        <h3>Observações</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item class="frase-impactante">
+      <ion-thumbnail slot="start">
+        <img alt="Silhouette of mountains" src="/assets/imagens/green_leaf_recycle_sign.jpg" />
+      </ion-thumbnail>
+      <ion-label>Lixo no lugar certo, o planeta agradece!</ion-label>
+    </ion-item>
+
+    <div class="botoes-links">
+      <ion-grid>
+        <ion-row class="ion-justify-content-center">
+          <ion-col>
+              <ion-button shape="round" class="btn-links">
+                <ion-icon name="chatbox-outline" class="icones-btn-links"></ion-icon>
+              </ion-button>
+              <p class="p-btn-links">Chat</p>
+          </ion-col>
+      
+          <ion-col>
+              <ion-button shape="round" class="btn-links">
+                <ion-icon name="map-outline" class="icones-btn-links"></ion-icon>
+              </ion-button>
+              <p class="p-btn-links">Mapa</p>
+            </ion-col>
+
+            <ion-col>
+              <ion-button shape="round" class="btn-links">
+                <ion-icon name="call-outline" class="icones-btn-links"></ion-icon>
+              </ion-button>
+              <p class="p-btn-links">Ligar</p>
+            </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Valor Total</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <h2>R$ 135,00</h2>
+        </ion-card-content>
+      </ion-card>
+
+      <div class="botoes-finais">
+        <ion-button class="btn-negociar">Negociar</ion-button>
+        <ion-button class="btn-aceitar">Aceitar</ion-button>
+      </div>
+  </div>
 </ion-content>
