tela de agendamento

--- a/src/app/agendamento/agendamento.page.html
+++ b/src/app/agendamento/agendamento.page.html
@@ -51,17 +51,15 @@
         </div>
 
         <!-- Botões Cancelar e OK -->
-        <div class="botoes-inline">
-          <ion-button fill="clear" size="small" color="medium">
-            Cancelar
-          </ion-button>
-          <ion-button fill="clear" size="small" color="success">
-            OK
-          </ion-button>
+        <div class="btn">
+          <input type="reset" value="cancelar">
+          <input type="submit" value="ok">
         </div>
 
       </ion-card-content>
+
     </ion-card>
+    <button class="btn-submit" type="submit">Avançar</button>
 
   </div>
 </ion-content>
