alteração pagina agendamento

--- a/src/app/agendamento/agendamento.page.html
+++ b/src/app/agendamento/agendamento.page.html
@@ -6,6 +6,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="container bgd">
+    <div class="blur-overlay"></div>
 
     <ion-card class="card-data">
       <ion-card-header>
