--- a/src/app/agendamento/agendamento.page.scss
+++ b/src/app/agendamento/agendamento.page.scss
@@ -120,3 +120,22 @@ input[type="date"] {
   width: 70%;
   text-align: center;
 }
+
+
+.blur-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  backdrop-filter: blur(0.5px);
+  -webkit-backdrop-filter: blur(0.2px);
+  background-color: rgba(255, 255, 255, 0.107); /* opcional, deixa esbranquiçado */
+}
+
+/* Garante que os cards fiquem acima do blur */
+.container > *:not(.blur-overlay) {
+  position: relative;
+  z-index: 1;
+}
