atualização tela 'pedido-prestador' (adicionei bgd white no content)

--- a/src/app/pedido-prestador/pedido-prestador.page.scss
+++ b/src/app/pedido-prestador/pedido-prestador.page.scss
@@ -4,6 +4,9 @@ ion-content {
 
 .content {
     position: relative;
+    background: #FFFFFF;
+    margin: 10px;
+    border-radius: 10px;
     z-index: 2;
     padding: 16px;
   }
