--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,21 +9,20 @@
       <div class="input-group">
         <ion-item>
           <ion-label position="floating">Email</ion-label>
-          <ion-input type="email" class="input-field"></ion-input>
+          <ion-input type="email" class="input-field" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Senha</ion-label>
-          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field"></ion-input>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field" [(ngModel)]="password"></ion-input>
           <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
         </ion-item>
 
-        <ion-button expand="block" class="enter-button">Entrar</ion-button>
+        <ion-button expand="block" class="enter-button" (click)="submitLogin()">Entrar</ion-button>
 
         <p class="forgot-password">Esqueci minha senha</p>
 
       </div>
-      
     </div>
   </div>
 </ion-content>
