--- a/src/app/perfil-cliente/perfil-cliente.page.html
+++ b/src/app/perfil-cliente/perfil-cliente.page.html
@@ -10,4 +10,5 @@
       <ion-title size="large">perfil-cliente</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-title>Olá, <i>{{currentUser?.name ?? 'carregando...'}}</i></ion-title>
 </ion-content>
