pequenos ajustes na tela home-cliente

--- a/src/app/home-cliente/home-cliente.page.html
+++ b/src/app/home-cliente/home-cliente.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-toolbar-global [titulo]="'Home'"></app-toolbar-global>
+    <app-toolbar-global [titulo]="'Home'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
@@ -42,7 +42,7 @@
       <div class="card">
         <ion-card>
           <ion-card-header>
-            <img class="img-card" src="/assets/imagens/icone-lampada-verde-png.png" alt="arvore-icone-png">
+            <img class="img-card" src="/assets/imagens/arvore-icone-png.png" alt="arvore-icone-png">
           </ion-card-header>
           <ion-card-content>O mundo muda quando a gente aprende a descartar.</ion-card-content>
         </ion-card>
