--- a/src/app/cadastro-cliente/cadastro-cliente.page.html
+++ b/src/app/cadastro-cliente/cadastro-cliente.page.html
@@ -1,42 +1,39 @@
-<ion-content class="ion-padding">
-  <div class="container">
+<ion-content>
+  <div class="content">
     <div class="logo-container">
-      <div class="logo-background">
-        <div class="logo-inner">
-          <span class="leaf-icon"></span> 
-          <div class="logo-text">
-            <span class="coleta">COLETA</span>
-            <span class="verde">VERDE</span>
-          </div>
-        </div>
-      </div>
+      <img src="{{ logoPath }}" alt="Logo Coleta Verde">
     </div>
 
     <div class="form-container">
       <div class="input-group">
         <ion-item>
           <ion-label position="floating">Nome da Empresa</ion-label>
-          <ion-input type="text" class="input-field"></ion-input>
+          <ion-input type="text" class="input-field" [(ngModel)]="nomeEmpresa"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">CNPJ da Empresa</ion-label>
+          <ion-input type="text" class="input-field" [(ngModel)]="cnpjEmpresa"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Nome Completo do Representante</ion-label>
-          <ion-input type="text" class="input-field"></ion-input>
+          <ion-input type="text" class="input-field" [(ngModel)]="nomeRepresentante"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Email</ion-label>
-          <ion-input type="email" class="input-field"></ion-input>
+          <ion-input type="email" class="input-field" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Senha</ion-label>
-          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field"></ion-input>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field" [(ngModel)]="senha"></ion-input>
           <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
         </ion-item>
       </div>
 
-      <ion-button expand="block" class="register-button">Registrar-se</ion-button> 
+      <ion-button expand="block" class="register-button">Submit</ion-button>
     </div>
   </div>
 </ion-content>
