feat: Adiciona tela de pedidos para cliente.

--- a/src/app/pedidos-cliente/pedidos-cliente.page.html
+++ b/src/app/pedidos-cliente/pedidos-cliente.page.html
@@ -4,8 +4,43 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" scrollY="false">
+<ion-content [fullscreen]="true">
   <div class="content">
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle class="subtitle-concluido">Concluído</ion-card-subtitle>
+        <ion-card-title>Descrição...</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        Pedido concluído em 17/03/25<br>
+        Concluído por José
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle class="subtitle-em-andamento">Em andamento</ion-card-subtitle>
+        <ion-card-title>Descrição...</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        Pedido aceito em 16/03/25
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle class="subtitle-pendente">Pendente</ion-card-subtitle>
+        <ion-card-title>Descrição...</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        Pedido feito em 15/03/25<br>
+        Aguardando contato
+      </ion-card-content>
+    </ion-card>
 
     <div class="center-button">
       <ion-button shape="round" class="add-pedido" [routerLink]="['/solicitacao']">
@@ -14,4 +49,6 @@
     </div>
 
   </div>
+
+  <div class="background-container"></div>
 </ion-content>
