--- a/src/app/cadastro-prestador/cadastro-prestador.page.html
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.html
@@ -1,13 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>cadastro-prestador</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <div class="content">
+    <div class="logo-container">
+      <img src="{{ logoPath }}" alt="Logo Coleta Verde">
+    </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cadastro-prestador</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div class="form-container">
+      <div class="input-group">
+        <ion-item>
+          <ion-label position="floating">Nome Completo</ion-label>
+          <ion-input type="text" class="input-field" [(ngModel)]="nomeCompleto"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">CPF</ion-label>
+          <ion-input type="text" class="input-field" [(ngModel)]="cpf"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" class="input-field" [(ngModel)]="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Telefone</ion-label>
+          <ion-input type="tel" class="input-field" [(ngModel)]="telefone"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input [type]="passwordVisible ? 'text' : 'password'" class="input-field" [(ngModel)]="senha"></ion-input>
+          <ion-icon class="eye-icon" slot="end" [name]="passwordVisible ? 'eye-outline' : 'eye-off-outline'" (click)="togglePasswordVisibility()"></ion-icon>
+        </ion-item>
+      </div>
+
+      <ion-button expand="block" class="register-button">Submit</ion-button>
+    </div>
+  </div>
+
+  <div class="background-container"></div>
 </ion-content>
