v1 Layout Pag Inicial

--- a/src/app/inicial/inicial.page.html
+++ b/src/app/inicial/inicial.page.html
@@ -1,7 +1,17 @@
-<ion-header [translucent]="true">
+<ion-content>
+    <div class="content">
+      <div class="logo-container">
+        <img src="{{ logoPath }}" alt="Logo Coleta Verde">
+      </div>
+  
+      <div class="form-container">
+        <h1>Bem -<br>Vindo ...</h1>
+  
+        <ion-button expand="block" class="btnAcesso">PRSTADOR DE SERVIÇO</ion-button>
 
-</ion-header>
+        <span>OU</span>
 
-<ion-content [fullscreen]="true">
-
-</ion-content>
+        <ion-button expand="block" class="btnAcesso">EMPRESA</ion-button>
+      </div>
+    </div>
+  </ion-content>
