--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -55,5 +55,5 @@ span {
 
 .btnAcesso button.button-native {
     background-color: #276040 !important;
-    background: #276040;
+    background: #276040 !important;
 }
